# Schemap

./: README.md  llm_data_context.md  pyproject.toml  schemap.yaml  schemap_tools.py  test.db  test_llm_data_context.json  test_llm_data_context.md  test_llm_data_context.txt  test_schemap.yaml
.github/workflows/: schemap.yml
.schemap/: cache.json
docs/: app.js  index.html  style.css
schemap/: cli.py  config.py  diff.py  enrichment.py  export.py  extractor.py  license.py  linter.py  models.py  renderer.py
schemap/templates/: ai.txt.j2  context.md.j2
tests/: test_extractor.py  test_license.py  test_models.py  test_renderer.py
