[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schemap-tool"
version = "0.8.0"
description = "A deterministic tool that outputs highly compressed database schemas"
authors = [
    { name = "Data Architect", email = "architect@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.6.0",
    "jinja2>=3.1.0",
    "psycopg[binary]>=3.1.0",
    "pyyaml>=6.0.0",
    "libsql",
    "tiktoken>=0.6.0",
    "watchdog>=4.0.0",
    "pymysql",
    "oracledb"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.10.0"
]
enrich = [
    "openai>=1.14.0"
]

[project.scripts]
schemap = "schemap.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["schemap"]
